# nonebot-plugin-personification

./: .gitignore  .pdm-python  CONFIG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: persona_template.yaml
nonebot_plugin_personification/: DIRECTORY_GUIDE.md  __init__.py  config.py  plugin_data.py  schedule.py  utils.py  web_console_api.py
nonebot_plugin_personification/agent/: action_executor.py  inner_state.py  loop.py
nonebot_plugin_personification/agent/runtime/: intent.py  runner.py  tool_catalog.py
nonebot_plugin_personification/core/: __init__.py  ai_routes.py  background_intelligence.py  builtin_hooks.py  chat_intent.py  config_registry.py  context_cleanup.py  context_policy.py  data_store.py  db.py  group_context.py  help_registry.py  image_result_cache.py  knowledge_builder.py  knowledge_store.py  media_understanding.py  memory_store.py  message_parts.py  persona_profile.py  plugin_inspector.py  plugin_meta.py  plugin_runtime.py  proactive_store.py  prompt_hooks.py  prompt_loader.py  provider_router.py  qzone_service.py  response_review.py  runtime_builder.py  runtime_config.py  service_factory.py  session_store.py  sticker_cache.py  sticker_library.py  sticker_semantics.py  time_ctx.py  tts_service.py  web_grounding.py
nonebot_plugin_personification/core/services/: agent_runtime.py  providers.py
nonebot_plugin_personification/flows/: __init__.py  chat_summary_flow.py  diary_flow.py  proactive_flow.py  runtime_switch_flow.py  style_flow.py
nonebot_plugin_personification/handlers/: __init__.py  admin_commands.py  admin_helpers.py  admin_matchers.py  chat_matchers.py  diary_matchers.py  event_rules.py  persona_admin_commands.py  persona_commands.py  record_message_handler.py  reply_buffer.py  reply_matchers.py  reply_processor.py  rule_builders.py  runtime_commands.py  runtime_matchers.py  sticker_chat_handler.py  style_context_matchers.py  style_diary_handlers.py  yaml_response_handler.py
nonebot_plugin_personification/handlers/reply_pipeline/: pipeline_context.py  pipeline_emotion.py  pipeline_sticker.py  processor.py
nonebot_plugin_personification/handlers/yaml_pipeline/: processor.py
nonebot_plugin_personification/jobs/: __init__.py  periodic_jobs.py  scheduler_registration.py  task_builders.py
nonebot_plugin_personification/mcp/: bridge.py
nonebot_plugin_personification/skill_runtime/: custom_loader.py  loader.py  skill_isolation.py  source_resolver.py
nonebot_plugin_personification/skills/: __init__.py  custom_loader.py  datetime_tool.py  friend_request_tool.py  group_info_tool.py  news.py  sticker_labeler.py  sticker_tool.py  tool_caller.py  user_persona.py  user_tasks.py  vision_caller.py  weather.py  web_search.py
nonebot_plugin_personification/skills/skillpacks/acg_resolver/: skill.yaml
nonebot_plugin_personification/skills/skillpacks/acg_resolver/scripts/: impl.py  main.py
nonebot_plugin_personification/skills/skillpacks/datetime_tool/scripts/: impl.py  main.py
nonebot_plugin_personification/skills/skillpacks/friend_request_tool/scripts/: impl.py  main.py
nonebot_plugin_personification/skills/skillpacks/group_info_tool/scripts/: impl.py  main.py
nonebot_plugin_personification/skills/skillpacks/memory_palace/scripts/: impl.py  main.py
nonebot_plugin_personification/skills/skillpacks/news/scripts/: impl.py  main.py
nonebot_plugin_personification/skills/skillpacks/plugin_knowledge/: skill.yaml
nonebot_plugin_personification/skills/skillpacks/plugin_knowledge/scripts/: impl.py  main.py
nonebot_plugin_personification/skills/skillpacks/resource_collector/scripts/: impl.py  main.py
nonebot_plugin_personification/skills/skillpacks/sticker_labeler/scripts/: impl.py
nonebot_plugin_personification/skills/skillpacks/sticker_tool/: SKILL.md
nonebot_plugin_personification/skills/skillpacks/sticker_tool/scripts/: impl.py  main.py
nonebot_plugin_personification/skills/skillpacks/tool_caller/scripts/: impl.py
nonebot_plugin_personification/skills/skillpacks/user_persona/scripts/: impl.py  main.py
nonebot_plugin_personification/skills/skillpacks/user_tasks/scripts/: impl.py  main.py
nonebot_plugin_personification/skills/skillpacks/vision_analyze/scripts/: impl.py  main.py
nonebot_plugin_personification/skills/skillpacks/vision_caller/scripts/: impl.py
nonebot_plugin_personification/skills/skillpacks/weather/scripts/: impl.py  main.py
nonebot_plugin_personification/skills/skillpacks/web_search/scripts/: impl.py  main.py
nonebot_plugin_personification/skills/skillpacks/wiki_search/scripts/: main.py
nonebot_plugin_personification/tests/: _loader.py  test_chat_intent.py  test_config_manager.py  test_context_compress.py  test_context_policy.py  test_image_classify.py  test_repeat_follow.py  test_response_review.py  test_routed_tool_caller.py  test_runner_render.py  test_sticker_pipeline.py  test_visual_capabilities.py
