[project]
name = "nonebot-plugin-shiro-personification"
version = "0.1.6"
description = "实现拟人化的群聊回复，支持好感度系统和自主回复决策"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "luojisama", email = "2534316454@qq.com" },
]
license = { text = "MIT" }
keywords = ["nonebot", "nonebot2", "plugin", "openai", "personification", "chatgpt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "nonebot2>=2.2.0",
    "nonebot-adapter-onebot>=2.4.0",
    "nonebot-plugin-apscheduler>=0.3.0",
    "nonebot-plugin-localstore>=0.6.0",
    "nonebot-plugin-htmlrender>=0.2.0",
    "nonebot-plugin-shiro-signin>=0.1.0",
    "openai>=1.0.0",
    "pydantic",
    "aiofiles>=23.0.0",
    "httpx>=0.24.0",
    "Pillow>=9.0.0",
]

[project.urls]
"Homepage" = "https://github.com/luojisama/nonebot-plugin-personification"
"Bug Tracker" = "https://github.com/luojisama/nonebot-plugin-personification/issues"
"Repository" = "https://github.com/luojisama/nonebot-plugin-personification"

[project.optional-dependencies]

[tool.nonebot]
plugins = ["nonebot_plugin_personification"]
plugin_dirs = ["nonebot_plugin_personification"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
